@startuml

title __APP's Class Diagram__\n

  package inf112.skeleton.app {
    class HelloWorld {
        - batch : SpriteBatch
        - font : BitmapFont
        - i : int
        + create()
        + dispose()
        + render()
        + resize()
        + pause()
        + resume()
        + keyDown()
        + keyUp()
        + keyTyped()
        + touchDown()
        + touchUp()
        + touchDragged()
        + mouseMoved()
        + scrolled()
    }
  }
  

  package inf112.skeleton.app {
    class Main {
        {static} + main()
    }
  }
  

  package inf112.skeleton.app {
    class RoboRallyDemo {
        ~ tiledMap : TiledMap
        ~ tiledMapRenderer : TiledMapRenderer
        ~ camera : OrthographicCamera
        - batch : SpriteBatch
        - texture : Texture
        - sprite : Sprite
        - posX : float
        - posY : float
        + create()
        + dispose()
        + render()
        + resize()
        + pause()
        + resume()
        + keyDown()
        + keyUp()
        + keyTyped()
        + touchDown()
        + touchUp()
        + touchDragged()
        + mouseMoved()
        + scrolled()
    }
  }
  

  package inf112.skeleton.app {
    class Robot {
        - sprite : String
        - posX : float
        - posY : float
        + Robot()
        + getPosX()
        + getPosY()
        + getSprite()
    }
  }
  

  HelloWorld -up-|> ApplicationListener
  HelloWorld -up-|> InputProcessor
  RoboRallyDemo -up-|> ApplicationListener
  RoboRallyDemo -up-|> InputProcessor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
